fix: finally fix spacing; i am dumb

--- a/assets/index.css
+++ b/assets/index.css
@@ -60,12 +60,11 @@ main {
   flex-direction: column;
   width: 100%;
   height: 100vh;
+  margin-top: -8em;
+  margin-bottom: 8em;
 }
 
 .picture {
-  display: flex;
-  position: relative;
-  top: -8em;
 }
 
 .mypic {
@@ -80,8 +79,6 @@ main {
   color: var(--text-one);
   font-weight: bolder;
   font-size: calc(2em + 2vw);
-  position: relative;
-  top: -1.5em;
   animation-fill-mode: forwards;
 }
 
@@ -95,8 +92,6 @@ main {
 
 .socials {
   display: inline-flex;
-  position: relative;
-  top: -6em;
   margin-bottom: 0;
 }
 
@@ -125,8 +120,6 @@ main {
   justify-content: center;
   width: 50em;
   max-width: 90vw;
-  position: relative;
-  margin-top: -9em;
 }
 
 .typewrite {
